tests/invalid/ListLength_Invalid_1.whiley

method main() -> int:
    int[] arr
    if 10 > 0:
        arr = [1, 2]
    else:
        arr = [1, 2, 3]
    assert |arr| == 4
    return arr[0]
